--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "main": "pathToMain",
   "dependencies": {
+    "math.js": "^1.1.46",
     "node-fetch": "^3.3.0"
   },
   "type": "module"
